--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@material-ui/core": "3.3.2",
     "@material-ui/icons": "3.0.1",
     "axios": "0.18.0",
-    "babel-plugin-styled-components": "1.8.0",
     "body-parser": "1.18.3",
     "classnames": "2.2.6",
     "d3": "5.7.0",
@@ -37,7 +36,11 @@
     "next": "7.0.2",
     "prop-types": "15.6.2",
     "react": "16.6.0",
-    "react-dom": "16.6.0"
+    "react-dom": "16.6.0",
+    "styled-components": "4.0.3",
+    "styled-jsx": "3.1.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-plugin-styled-components": "1.8.0"
+  }
 }
